--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <button id="zoomOutBtn" class="zoom-btn" title="Zoom Out">−</button>
                     <span id="zoomLevel" class="zoom-level">100%</span>
                     <button id="zoomInBtn" class="zoom-btn" title="Zoom In">+</button>
-                    <button id="resetZoomBtn" class="zoom-btn reset-btn" title="Reset Zoom">🔍</button>
+                    <button id="resetZoomBtn" class="zoom-btn reset-btn" title="Reset Zoom">⛶</button>
                     <button id="updateOverlayBtn" class="zoom-btn update-btn" title="Update Markers">⟳</button>
                 </div>
                 <div class="image-wrapper" id="imageWrapper">
