save/load from local storage

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <div class="export-buttons">
                         <button id="exportBtn" class="export-btn" disabled>Export Current Floor</button>
                         <button id="exportAllBtn" class="export-btn export-all-btn">Export All Floors</button>
+                        <button id="clearAllBtn" class="export-btn clear-all-btn">Clear All Data</button>
                     </div>
                 </div>
             </div>
