seat map updated, seats are draggable

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="grid-controls">
                         <button id="gridToggleBtn" class="zoom-btn grid-btn" title="Toggle Snap Grid">⊞</button>
                         <button id="gridDecreaseBtn" class="zoom-btn grid-size-btn" title="Decrease Grid Size">◂</button>
-                        <span id="gridSize" class="grid-size-display">20px</span>
+                        <span id="gridSize" class="grid-size-display">5px</span>
                         <button id="gridIncreaseBtn" class="zoom-btn grid-size-btn" title="Increase Grid Size">▸</button>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="instructions">
-                    <p>Left-click to add a seat • Right-click to remove a seat • Use zoom controls or mouse wheel to zoom</p>
+                    <p>Left-click to add a seat • Drag to move • Right-click to remove • Mouse wheel to zoom</p>
                 </div>
             </div>
             
