working on bookings

--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
             </div>
             
             <div class="sidebar">
-                <div class="seat-list-panel">
+                <!-- Link to Booking Page -->
+                <div class="booking-link-panel">
+                    <a href="booking.html" class="booking-page-link">
+                        📅 Go to Seat Booking
+                        <span class="link-arrow">→</span>
+                    </a>
+                </div>
+                
+                <!-- Mapping Panel -->
+                <div class="seat-list-panel" id="mappingPanel">
                     <h2>Mapped Seats <span id="floorNameBadge" class="floor-badge"></span></h2>
                     <div class="seat-list" id="seatList">
                         <p class="empty-message">No seats mapped yet. Click on the floor plan to start.</p>
