improvments to bookings

--- a/booking.html
+++ b/booking.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="instructions">
-                    <p>Click seat to book/cancel • Click & drag to select multiple seats • Mouse wheel to zoom</p>
+                    <p>Click seat to book/cancel • Click & drag to select multiple seats</p>
                 </div>
             </div>
             
