--- a/booking.html
+++ b/booking.html
@@ -119,10 +119,10 @@
                     <label for="loginUsername">Your Name:</label>
                     <input type="text" id="loginUsername" class="login-input" placeholder="Enter your name" autofocus>
                 </div>
-                <div class="login-checkbox">
+                <!-- div class="login-checkbox">
                     <input type="checkbox" id="allowNameChange" checked>
                     <label for="allowNameChange">Allow changing name after sign-in</label>
-                </div>
+                </div -->
             </div>
             <div class="login-modal-footer">
                 <button id="loginSubmitBtn" class="login-submit-btn" disabled>Sign In</button>
