firebase backend introduced

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <!-- Microsoft Authentication Library (MSAL) for Entra ID -->
     <script src="https://alcdn.msauth.net/browser/2.38.0/js/msal-browser.min.js"></script>
+    <!-- Firebase SDK for cloud storage -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
     <!-- Authentication configuration and module -->
     <script src="auth-config.js"></script>
     <script src="auth.js"></script>
+    <!-- Firebase configuration and storage module -->
+    <script src="firebase-config.js"></script>
+    <script src="firebase-storage.js"></script>
 </head>
 <body class="booking-page">
     <div class="container">
