--- a/mapedit.html
+++ b/mapedit.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <!-- PDF.js library for rendering PDF files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <!-- Firebase SDK for cloud storage -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+    <!-- Firebase configuration and storage module -->
+    <script src="firebase-config.js"></script>
+    <script src="firebase-storage.js"></script>
 </head>
 <body>
     <div class="container">
