--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="booking-header">
             <div class="header-content">
                 <h1>🎫 Seat Booking</h1>
-                <a href="mapedit.html" class="back-link">← Back to Floor Mapping</a>
+                <!-- <a href="mapedit.html" class="back-link">← Back to Floor Mapping</a> -->
             </div>
         </header>
         
